--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,7 +5,7 @@
   |============================
 */
 /* Common styles */
-@import url('./reset.css');
+/*@import url('./reset.css');*/
 @import url('./base.css');
 @import url('./container.css');
 @import url('./animations.css');
@@ -15,4 +15,76 @@
 @import url('./vite-promo.css');
 @import url('./badges.css');
 @import url('./back-link.css');
-@import url('./footer.css');
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+input {
+  font-family: inherit;
+}
+button {
+  border: none;
+  font-family: inherit;
+}
+.timer-input {
+  width: 269px;
+  height: 40px;
+  background-color: #fff;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  margin: 0 8px 32px 156px;
+  padding-left: 8px;
+}
+.timer-input:hover {
+  border: 1px solid #000;
+}
+.timer-input:active {
+  color: #000;
+  border: 1px solid #4e75ff;
+}
+.timer-input:disabled {
+  color: #808080;
+  background-color: #fafafa;
+  border: 1px solid #808080;
+}
+.timer-btn {
+  width: 75px;
+  height: 40px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #4e75ff;
+  border-radius: 8px;
+  padding: 8px 16px;
+}
+.timer-btn:hover {
+  background-color: #6c8cff;
+}
+.timer-btn:disabled {
+  color: #989898;
+  background-color: #cfcfcf;
+}
+.timer {
+  margin: auto;
+  width: 346px;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 156px;
+}
+.field {
+  display: flex;
+  flex-direction: column;
+}
+
+.value {
+  font-size: 40px;
+  line-height: 1.2;
+  text-align: center;
+}
+.label {
+  text-transform: uppercase;
+}
