--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -88,3 +88,66 @@ button {
 .label {
   text-transform: uppercase;
 }
+
+.form {
+  display: grid;
+}
+.form-label {
+  display: flex;
+  flex-direction: column;
+  padding: 36px 0 0 156px;
+  margin-bottom: 16px;
+  width: 360px;
+  height: 72px;
+}
+
+.delay-input {
+  height: 40px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  margin-top: 8px;
+}
+.delay-input:hover {
+  border: 1px solid #000;
+  fill: #2e2f42;
+}
+.delay-input:active {
+  border: 1px solid #4e75ff;
+}
+.radio-btn {
+  margin-left: 156px;
+  margin-bottom: 24px;
+  padding: 0 0 0 12px;
+  width: 346px;
+  height: 78px;
+  border-radius: 4px;
+  stroke-width: 1px;
+  stroke: #808080;
+}
+.radio-btn input {
+  margin-top: 24px;
+  margin-left: 48px;
+}
+.radio-btn:active {
+  border: 1px solid #4e75ff;
+}
+.fulfilled-input:active {
+  stroke: #4e75ff;
+  fill: #4e75ff;
+}
+.rejected-input:active {
+  stroke: #4e75ff;
+  fill: #4e75ff;
+}
+.btn {
+  margin-left: 156px;
+  width: 360px;
+  height: 40px;
+  color: #fff;
+  border-radius: 8px;
+  padding: 8px 16px;
+  background-color: #4e75ff;
+}
+.btn:hover {
+  background-color: #6c8cff;
+}
